# programs

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  cargo-generate.toml
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: check-build.yaml  docker-publish.yml
.maintain/: AGPL-3.0-header.txt
acl/: Cargo.toml  README.md
acl/src/: lib.rs  tests.rs
build-entropy-programs/: Dockerfile
constraints/: Cargo.toml  README.md
constraints/src/: architectures.rs  constraints.rs  lib.rs  tests.rs
core/: Cargo.toml  README.md
core/src/: architectures.rs  constraints.rs  lib.rs  programs.rs
evm/: Cargo.toml  README.md
evm/src/: lib.rs
examples/: Cargo.toml  README.md
examples/barebones/: Cargo.toml
examples/barebones-with-auxilary/: Cargo.toml
examples/barebones-with-auxilary/src/: lib.rs
examples/barebones-with-extra/: Cargo.toml
examples/barebones-with-extra/src/: lib.rs
examples/barebones/src/: lib.rs
examples/basic-MFA/: Cargo.toml
examples/basic-MFA/src/: lib.rs
examples/basic-template/: Cargo.toml  Dockerfile
examples/basic-transaction/: Cargo.toml  README.md  build.rs
examples/basic-transaction/src/: lib.rs
examples/custom-hash/: Cargo.toml
examples/custom-hash/src/: lib.rs
examples/device-key-proxy/: Cargo.toml
examples/device-key-proxy/src/: lib.rs  tests.rs
examples/infinite-loop/: Cargo.toml
examples/infinite-loop/src/: lib.rs
examples/mfa/: Cargo.toml
examples/mfa/src/: lib.rs
examples/not-a-transaction/: Cargo.toml
examples/not-a-transaction/src/: lib.rs
examples/oracle-example/: Cargo.toml
examples/oracle-example/src/: lib.rs
examples/permissioned/: Cargo.toml
examples/permissioned/src/: lib.rs
examples/private-acl/: Cargo.toml  addresses.txt  build.rs
examples/private-acl/src/: lib.rs
examples/private-transaction-acl/: Cargo.toml
examples/risczero-zkvm-verification/: Cargo.toml
examples/risczero-zkvm-verification/json/: Cargo.toml
examples/risczero-zkvm-verification/json/core/: Cargo.toml
examples/risczero-zkvm-verification/json/methods/: Cargo.toml
examples/risczero-zkvm-verification/json/methods/guest/: Cargo.toml
examples/risczero-zkvm-verification/json/src/: main.rs
examples/risczero-zkvm-verification/src/: lib.rs
examples/siwe/: Cargo.toml  README.md
examples/siwe/src/: lib.rs
examples/src/: barebones.rs  basic.rs
examples/substrate/: Cargo.toml  README.md
examples/substrate/src/: lib.rs  tests.rs
examples/wit/: host.wit
generate-types/: Cargo.toml  device_key_proxy_aux_data_type.txt  device_key_proxy_config_type.txt
generate-types/src/: main.rs
programs/: Cargo.toml  README.md
programs/src/: lib.rs
runtime/: Cargo.toml  README.md
runtime/src/: lib.rs
runtime/tests/: barebones-component.wasm  basic_runtime_call.rs  runtime.rs
scripts/: add-license-headers.sh
substrate/: Cargo.toml  README.md  build.rs  substrate_metadata.scale
substrate/src/: lib.rs  tests.rs
templates/basic-template/: .gitignore  Cargo.toml  Dockerfile  README.md
templates/basic-template/cli/: Cargo.toml  entropy_metadata.scale
templates/basic-template/cli/src/: main.rs
templates/basic-template/generate-types/: Cargo.toml
templates/basic-template/generate-types/src/: lib.rs  main.rs
templates/basic-template/program/: Cargo.toml
templates/basic-template/program/src/: lib.rs
templates/basic-template/src/: lib.rs  tests.rs
templates/generate-types/: Cargo.toml
wit/: application.wit
