[workspace]
members = ["constraints", "core", "acl", "evm", "runtime", "examples/*"]
resolver = "2"

[workspace.dependencies]
ec-constraints = { path = "constraints", default-features = false }
ec-core = { path = "core", default-features = false }
ec-acl = { path = "acl", default-features = false }
ec-evm = { path = "evm", default-features = false }
ec-runtime = { path = "runtime", default-features = false }
wit-bindgen = { version = "0.7.0", default_features = false }
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v0.18.0", default-features = false }
risc0-build = { git = "https://github.com/risc0/risc0", tag = "v0.18.0" }

# strip debug info since that makes up a major part of Wasm blobs, see Wasm's `twiggy`
[profile.release.package.template-basic-transaction]
strip = "debuginfo"
[profile.release.package.template-barebones]
strip = "debuginfo"
[profile.release.package."*"]
strip = "debuginfo"
