[workspace]
members = ["programs", "core", "acl", "evm", "runtime", "examples/*"]
resolver = "2"

[workspace.dependencies]
entropy-programs = { path = "programs", default-features = false }
entropy-programs-core = { path = "core", default-features = false }
entropy-programs-acl = { path = "acl", default-features = false }
entropy-programs-evm = { path = "evm", default-features = false }
entropy-programs-runtime = { path = "runtime", default-features = false }
wit-bindgen = { version = "0.7.0", default_features = false }
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v0.18.0", default-features = false }
risc0-build = { git = "https://github.com/risc0/risc0", tag = "v0.18.0" }

# strip debug info since that makes up a major part of Wasm blobs, see Wasm's `twiggy`
[profile.release]
strip = "debuginfo"
