[workspace]
members = ["programs", "core", "acl", "evm", "runtime", "examples/*", "generate-types"]
exclude = ["templates/*", "examples/risczero-zkvm-verification"]
resolver = "2"

[workspace.dependencies]
entropy-programs = { path = "programs", default-features = false }
entropy-programs-core = { path = "core", default-features = false }
entropy-programs-acl = { path = "acl", default-features = false }
entropy-programs-evm = { path = "evm", default-features = false }
entropy-programs-runtime = { path = "runtime", default-features = false }
entropy-generate-types = { path = "generate-types", default-features = false }
wit-bindgen = { version = "0.7.0", default_features = false }

# strip debug info since that makes up a major part of Wasm blobs, see Wasm's `twiggy`
[profile.release]
strip = "debuginfo"
