[package]
name = "entropy-programs-acl"
version = "0.1.0"
authors = ["Entropy Cryptography <engineering@entropy.xyz>"]
homepage = "https://entropy.xyz/"
license = "AGPL-3.0-or-later"
repository = "https://github.com/entropyxyz/programs"
edition = "2021"

[dependencies]
entropy-programs-core = { path = "../core", default-features = false }
entropy-programs-evm = { path = "../evm", default-features = false, optional = true }

serde = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "max-encoded-len",
] }
scale-info = { version = "2.1.0", default-features = false }

[features]
default = ["std"]
evm = ["dep:entropy-programs-evm"]
std = ["entropy-programs-core/std", "codec/std", "evm"]
