[package]
name = "ec-constraints"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib"]

[dependencies]
ec-acl = { path = "../acl", default-features = false, features = ["evm"] }
ec-evm = { path = "../evm", default-features = false }
ec-core = { path = "../core", default-features = false }

[dev-dependencies]
# ec-runtime = { path = "../runtime", default-features = false }

[features]
default = ["std"]
std = ["ec-acl/std", "ec-evm/std"]
