[package]
name = "ec-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
witgen = "0.15.0"

# parsing
serde = { version = "1.0", default-features = false, features = ["derive"] }
wit-bindgen = { version = "0.7.0", default-features = false, features = ["macros"] }
# wasmtime-wit-bindgen = { version = "10.0.1", default-features = false }
# wasmtime-component-macro = { version = "10.0.1", default-features = false }
# wasmtime ={ version = "10.0.1", default-features = false, features = ["component-model"] }

[features]
default = ["std"]
std = ["serde/std"]
