[package]
name = "entropy-programs-core"
version = "0.1.0"
authors = ["Entropy Cryptography <engineering@entropy.xyz>"]
homepage = "https://entropy.xyz/"
license = "AGPL-3.0-or-later"
repository = "https://github.com/entropyxyz/programs"
edition = "2021"
description = "Core traits and types for building programs on the Entropy network."

[dependencies]
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
witgen = "0.15.0"

# parsing
serde = { version = "1.0", default-features = false, features = ["derive"] }
wit-bindgen = { version = "0.7.0" }
# wasmtime-wit-bindgen = { version = "10.0.1", default-features = false }
# wasmtime-component-macro = { version = "10.0.1", default-features = false }
# wasmtime ={ version = "10.0.1", default-features = false, features = ["component-model"] }

[dev-dependencies]
entropy-programs-acl = { path = "../acl", default-features = false, features = ["evm"] }
entropy-programs-evm = { path = "../evm", default-features = false }

[features]
default = ["std"]
std = ["serde/std"]
