[package]
name = "ec-evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ec-core = { path = "../core" }

# EVM
ethers-core = { version = "0.13.0", default-features = false }
rlp = { version = "0.5.2", default-features = false }
hex = "0.4.3"
primitive-types = { version = "0.11.1", default-features = false, features = [
  "scale-info",
  "serde_no_std",
] }
serde = { version = "1.0", default-features = false }


[features]
default = ["std"]
std = ["rlp/std", "primitive-types/std"]
