[package]
name = "ec-evm"
version = "0.1.0"
authors = ["Entropy Cryptography <engineering@entropy.xyz>"]
homepage = "https://entropy.xyz/"
license = "AGPL-3.0-or-later"
repository = "https://github.com/entropyxyz/constraints"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ec-core = { path = "../core" }

# EVM
ethers-core = { version = "2.0.6", default-features = false }
getrandom = { version = "0.2", default-features = false, optional = true }
rlp = { version = "0.5.2", default-features = false }
hex = "0.4.3"
primitive-types = { version = "0.12.1", default-features = false, features = [
  "scale-info",
  "serde_no_std",
] }
serde = { version = "1.0", default-features = false }
# ethereum = { version = "0.14.0", default-features = false, features = ["with-serde"]}


[features]
default = []
# std = ["rlp/std", "primitive-types/std", "getrandom", "getrandom/std", "ethereum/std"]
std = ["rlp/std", "primitive-types/std"]
