[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# This is required to compile constraints to a wasm module
# [lib]
# crate-type = ["cdylib"]

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "barebones"
path = "src/barebones.rs"

[dependencies]
ec-constraints ={ path = "../constraints", default-features = false }
hex = { version = "0.4.3", default-features = false }
wit-bindgen = "0.7.0"
