[package]
name = "ec-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "12.0.1", features = ["component-model"] }
ec-core = { path = "../core" }
thiserror = "1.0.47"

[dev-dependencies]
# anyhow = "1.0.71"
