[package]
name = "template-basic-transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# This is required to compile constraints to a wasm module
[lib]
crate-type = ["cdylib"]

[dependencies]
ec-constraints = { workspace = true }

[build-dependencies]
hex = "0.4.3"

# These are used by `cargo component`
[package.metadata.component]
package = "entropy:template-basic-transaction"

[package.metadata.component.target]
path = "../../wit"

[package.metadata.component.dependencies]
