[package]
name = "template-basic-transaction"
version = "0.1.0"
authors = ["Entropy Cryptography <engineering@entropy.xyz>"]
homepage = "https://entropy.xyz/"
license = "Unlicense"
repository = "https://github.com/entropyxyz/constraints"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# This is required to compile constraints to a wasm module
[lib]
crate-type = ["cdylib"]

[dependencies]
ec-constraints = { workspace = true }
# TODO move hex parsing into the ec-evm crate
hex = { version = "0.4.3", default-features = false }

# These are used by `cargo component`
[package.metadata.component]
package = "entropy:template-basic-transaction"

[package.metadata.component.target]
path = "../../wit"

[package.metadata.component.dependencies]
