[package]
name = "infinite-loop"
version = "0.1.0"
authors = ["Entropy Cryptography <engineering@entropy.xyz>"]
homepage = "https://entropy.xyz/"
license = "Unlicense"
repository = "https://github.com/entropyxyz/constraints"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# This is required to compile programs to a wasm module and for use in rust libs
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
entropy-programs-core = { workspace = true }
schemars = {version = "0.8.16", optional = true}
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

# These are used by `cargo component`
[package.metadata.component]
package = "entropy:infinite-loop"

[package.metadata.component.target]
path = "../../wit"

[package.metadata.component.dependencies]

[features]
std = ["schemars"]