[package]
name = "not-a-transaction"
version = "0.1.0"
edition = "2021"

# This is required to compile constraints to a wasm module
[lib]
crate-type = ["cdylib"]

[dependencies]
ec-constraints ={ workspace = true }
# TODO move hex parsing into the ec-evm crate
hex = { version = "0.4.3", default-features = false }

# These are used by `cargo component`
[package.metadata.component]
package = "entropy:not-a-transaction"

[package.metadata.component.target]
path = "../../wit"

[package.metadata.component.dependencies]
