[package]
name = "example-risc0"
version = "0.1.0"
authors = ["Entropy Cryptography <engineering@entropy.xyz>"]
homepage = "https://entropy.xyz/"
license = "Apache-2.0"
repository = "https://github.com/entropyxyz/programs"
edition = "2021"

# This is required to compile programs to a wasm module
[lib]
crate-type = ["cdylib"]

[dependencies]
entropy-programs-core = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.3.3"
# json-example = { path = "json" }
risc0-zkvm = { workspace = true }

[dev-dependencies]
json-core = { path = "json/core" }
json-methods = { path = "json/methods" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v0.18.0", default-features = true }

[features]
std = ["risc0-zkvm/std"]

# These are used by `cargo component`
[package.metadata.component]
package = "entropy:example-risc0"

[package.metadata.component.target]
path = "../../wit"

[package.metadata.component.dependencies]
