[package]
name = "template-substrate"
version = "0.1.0"
authors = ["Entropy Cryptography <engineering@entropy.xyz>"]
homepage = "https://entropy.xyz/"
license = "Unlicense"
repository = "https://github.com/entropyxyz/programs"
edition = "2021"

# This is required to compile programs to a wasm module and for use in rust libs
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
entropy-programs = { workspace = true }
# TODO move hex parsing into the entropy-programs-evm crate
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
schemars = {version = "0.8.16", optional = true}
entropy-programs-substrate = { path = "../../substrate", default-features = false }

[dev-dependencies]
subxt = { version = "0.35.3", default-features=false, features=["native"], target_arch = "wasm32" }
# These are used by `cargo component`
[package.metadata.component]
package = "entropy:template-basic-transaction"

[package.metadata.component.target]
path = "../../wit"

[package.metadata.component.dependencies]

[features]
std = ["schemars"]