[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
license = "Unlicense"
edition = "2021"

[workspace]
members = ["generate-types", "."]
resolver = "2"

# strip debug info since that makes up a major part of Wasm blobs, see Wasm's `twiggy`
[profile.release]
strip = "debuginfo"

# This is required to compile programs to a wasm module and for use in rust libs
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
entropy-programs-core={ git="https://github.com/entropyxyz/programs.git", tag="v0.8.0" }
schemars = {version = "0.8.16", optional = true}
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

# These are used by `cargo component`
[package.metadata.component]
package = "entropy:{{project-name}}"

[package.metadata.component.dependencies]

# Metadata related to an Entropy program
[package.metadata.entropy-program]

# The docker image used to build this program
docker-image = "peg997/build-entropy-programs:version0.1"

# Configuration interface description
# interface-description = ""

[features]
std = ["schemars"]