[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap                 ={ version="4.4.6", features=["derive"] }
subxt                ={version = "0.35.3", features = ["substrate-compat"]}
colored              ="2.0.4"
tokio                ={ version="1.16", features=["macros", "rt-multi-thread", "io-util", "process"] }
anyhow               ="1.0.82"
dotenv = "0.15.0"
generate-types = { path = "../generate-types" }
project-root = "0.2.2"