[package]
name = "generate-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
program = { package = "{{project-name}}", path = "..", default-features = false, features = [
  'std',
] }
schemars = "0.8.16"
serde_json = { version = "1.0" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
